# intro_programing_python

./: .gitignore  .jupyterlite.doit.db  TODO.txt  programming_101_with_python.md  pyproject.toml
contents/: index.ipynb
contents/exercises/00_intro/: 0000_hello_world.ipynb
contents/files/exercises/00_intro/: 0000_hello_world.ipynb  0001_flow_and_variables.ipynb
contents/files/exercises/01_types_and_operators/: 0100_types.ipynb  0101_operators.ipynb  0102_comparisons_and_bool_operators.ipynb
contents/files/solutions/00_intro/: 0000_hello_world.ipynb  0001_flow_and_variables.ipynb
contents/solutions/00_intro/: 0000_hello_world.ipynb  0000_hellow_world.ipynb
doc/: example.qmd  howto_jupyterlite.md  howto_quarto.md
lite_dir/: jupyter-lite.json
quarto/: _quarto.yml  exceptions.qmd  index.qmd  run_python.qmd
quarto/control_flow/: block.qmd  for.qmd  if.qmd  index.qmd
quarto/everyday_python/: collections.qmd  comprehensions.qmd  counter.qmd  enumerate.qmd  everyday_python.qmd  lambda.qmd  paths.qmd  range.qmd  shutil.qmd  subprocess.qmd  typing.qmd  zip.qmd
quarto/exercises/: set1.qmd  set2.qmd  set3.qmd
quarto/files/: paths.qmd  read_write.qmd
quarto/functions/: arguments.qmd  definition.qmd  more_on_functions.qmd
quarto/intro/: flow_and_variables.qmd  hello_world.qmd
quarto/local_install/: hello_world2.qmd  run_python.qmd
quarto/types_and_operators/: comparisons_and_bool_operators.qmd  dictionaries.qmd  lists.qmd  operators.qmd  strings.qmd  types.qmd
src/: build_and_serve_site.py  build_site.py  clean_notebook_outputs.py
(+3 files in other folders)
