[project]
name = "intro-programing-python"
version = "0.1.0"
description = "Introduction to programing course based on Python exercises"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "sphinx>=8.0.2",
    "jupyterlite-sphinx>=0.16.5",
    "jupyterlite-pyodide-kernel>=0.4.1",
    "ipykernel>=6.29.5",
    "jupyterlite-core>=0.4.0",
    "nbconvert>=7.16.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/course"]